// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SLink.vue can be light 1`] = `
<a href="https://spartanbio.com" target="_blank" rel="noopener noreferrer" class="link link--light">link text
  <!---->
  <sicon icon="external-link" size="small" aria-label="External link" class="link__icon"></sicon>
</a>
`;

exports[`SLink.vue can be plain 1`] = `
<a href="https://spartanbio.com" target="_blank" rel="noopener noreferrer" class="link link--plain">link text
  <!---->
  <sicon icon="external-link" size="small" aria-label="External link" class="link__icon"></sicon>
</a>
`;

exports[`SLink.vue can display link text 1`] = `
<a href="https://spartanbio.com" target="_blank" rel="noopener noreferrer" class="link">link text
  <!---->
  <sicon icon="external-link" size="small" aria-label="External link" class="link__icon"></sicon>
</a>
`;

exports[`SLink.vue can have an icon 1`] = `
<a href="https://spartanbio.com" target="_blank" rel="noopener noreferrer" class="link">link text <sicon icon="activity" size="small" class="link__icon"></sicon>
  <sicon icon="external-link" size="small" aria-label="External link" class="link__icon"></sicon>
</a>
`;

exports[`SLink.vue detects external links and uses \`a\` tag for them 1`] = `
<a href="https://spartanbio.com" target="_blank" rel="noopener noreferrer" class="link">link text
  <!---->
  <sicon icon="external-link" size="small" aria-label="External link" class="link__icon"></sicon>
</a>
`;

exports[`SLink.vue detects internal links and uses a link component 1`] = `
<a class="link">link text
  <!---->
  <!----></a>
`;

exports[`SLink.vue detects nuxt and uses \`nuxt-link\` instead of \`router-link\` 1`] = `
<a class="link">/about
  <!---->
  <!----></a>
`;

exports[`SLink.vue respects \`isExternal\` prop 1`] = `
<a href="/internal" target="_blank" rel="noopener noreferrer" class="link">link text
  <!---->
  <sicon icon="external-link" size="small" aria-label="External link" class="link__icon"></sicon>
</a>
`;

exports[`SLink.vue uses \`a\` when no router is present 1`] = `
<a href="/about" class="link">/about
  <!---->
  <!----></a>
`;

exports[`SLink.vue uses best practices for [target="_blank"] 1`] = `
<a href="https://spartanbio.com" target="_blank" rel="noopener noreferrer" class="link">link text
  <!---->
  <sicon icon="external-link" size="small" aria-label="External link" class="link__icon"></sicon>
</a>
`;
